--- a/frontEnd/templates/login.html
+++ b/frontEnd/templates/login.html
@@ -1,6 +1,7 @@
 <link href='https://fonts.googleapis.com/css?family=Averia Libre' rel='stylesheet'>
 
- 
+<link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
+
 
 <div align="center" >
     <h2 class="login"><b>Log in to AllChat !</b></h2>
@@ -28,8 +29,7 @@
         </form>
 
     </div>
-</div>
 
-<div>
-    <img src="" >
+<div class="developedBy">
+    <b>PURUSHOTTAM</b>
 </div>
